--- a/index.css
+++ b/index.css
@@ -61,12 +61,12 @@
 }
 
 
-.box-pj{
+.containerBox{
     background-color: #000;
     margin-top: 600px;
 }
 
-.box-pj h1{
+.containerBox h1{
     margin-top: -190px;
     color: #000;
 }
@@ -78,39 +78,7 @@
     object-fit: cover;
 }
 
-.feed{
-    background-color: #000;
-}
-
-.feed h1{
-    margin-top: 350px;
-    text-transform: uppercase;
-}
-
-.feed img{
-    filter: invert(1);
-    border-radius: 50%;
-    width: 150px;
-    height: 150px;
-}
-
-.feed h1{
-    text-transform: uppercase;
-    color: #F8F8F8;
-}
-
-.feed p{
-    color: #F8F8F8;
-    max-width: 700px;
-}
-
-.feed .back{
-    background: #1e1e1e59;
-    border-radius: 20px;
-    box-shadow: -1px 4px 36px -7px rgba(255, 255, 255, 0.15);
-}
-
-.cinza{
+.containercinza{
     background: #000;
 }
 
@@ -132,19 +100,32 @@ footer h1{
     margin-top: 220px;
 }
 
-.banner-style{
-    background-image: url(https://s3.tattoo2me.com/wp-content/uploads/2021/07/4-74-820x1024.jpg);
+#banner-style{
+    background-image: url(https://segredosdomundo.r7.com/wp-content/uploads/2021/01/tatuagens-realistas-desenhos-impressionantes-para-te-inspirar.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
     width: 100%;
     height: 600px;
+
 }
 
-.banner-style img{
-    height: 100px;
+.text h1{
+    color: #FFF;
+    margin: 50px;
+    margin-top: -150px;
 }
 
-.banner-style h2{
-    margin-top: 400px;
-    margin-left: 1400px;
+.desc-style p{
+    padding: 50px;
+}
+
+.content-image-style{
+    background: #000;
+    margin: 30px;
+}
+
+.image-style img{
+    height: 300px;
+    border-radius: 8px;
 }
